# ft_turing

./: .gitignore  Machine.hs  Makefile  README.md  Transition.hs  dune  ft_turing.ml  hie.yaml  main.hs  turing.cabal  unary_sub.json
_build/: log
app/: Main.hs
app/configs/: is_02n.json  is_0n1n.json  is_palindrome.json  unary_add.json  unary_add_encoded  universal.json  universal_rules.json
src/: Color.hs  Machine.hs  Transition.hs  Turing.hs
test/: Test.hs
