cabal-version:      3.4
name:               turing
version:            0.1
extra-source-files: README.md

library
  exposed-modules:  Color, Machine, Transition
  hs-source-dirs:   src
  build-depends:    base, aeson, containers
  default-language: Haskell2010

executable turing
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    turing, base, aeson, containers, bytestring
  default-language: Haskell2010

test-suite turing-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:    turing, base, hspec, QuickCheck
  default-language: Haskell2010
