cabal-version:      3.4
name:               turing
version:            0.1
extra-source-files: README.md

library
  exposed-modules:  Turing, Machine, Transition, Color
  hs-source-dirs:   src
  build-depends:    base, aeson, containers, bytestring
  default-language: Haskell2010

executable turing
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    turing, base
  default-language: Haskell2010

test-suite turing-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:    turing, base, hspec, QuickCheck, silently
  default-language: Haskell2010
